corrected layout problems, allowed unrestigered users to view bands blade

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,7 +25,7 @@ body {
     }
 
     .main-content {
-        margin-left: 250px;
+        margin-left: 300px;
     }
 }
 
